--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,14 @@
   opacity: 1;
   transition: opacity 1000ms ease-in;
 }
+
+.help-block {
+  display:block;
+  margin-top:5px;
+  margin-bottom:10px;
+  color:#737373
+}
+
+.has-error .help-block{
+  color:#a94442;
+}
